--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -116,6 +116,7 @@
     flex-direction:column;
     order:-3;
     z-index:1000;
+    position: relative;
 }
 .top-bar .left,.top-bar .right {
     display:flex;
