--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -31,9 +31,11 @@ footer.site-footer a {
     
 }
 @media screen and (min-width:1200px) {
-    footer.site-footer {
-        flex-direction:column;
-       
-    }
     
+}
+
+
+.onde-social-widget img {
+    width:48px;
+    height:auto;
 }
