--- a/assets/css/woocommerce-custom.css
+++ b/assets/css/woocommerce-custom.css
@@ -48,6 +48,13 @@ Custom WooCommerce Styling
 ul.products li.product img {
     display: block;
     margin: auto;
+    
+}
+.woocommerce-product-gallery__image,ul.products li.product img,.woocommerce-Tabs-panel img {
+    box-shadow:var(--onde-light-box-shadow);
+}
+.woocommerce-Tabs-panel img {
+    margin:0.5em;
 }
 li.product {
 	display: flex;
@@ -118,8 +125,20 @@ ul.products li.product .price {
 .woocommerce-price-suffix {
 	color:#000;
 }
+/*
 .woocommerce #content div.product div.images, .woocommerce div.product div.images, .woocommerce-page #content div.product div.images, .woocommerce-page div.product div.images {
     margin: 0 40px 40px 0;
+}
+*/
+.woocommerce-product-gallery__image .wp-post-image {
+    display:block;
+    margin:auto;
+}
+.product_title.entry-title {
+    text-align:center;
+}
+.woocommerce-Price-amount {
+    color:#77a464;
 }
 .woocommerce #content div.product div.summary, .woocommerce div.product div.summary, .woocommerce-page #content div.product div.summary, .woocommerce-page div.product div.summary {
     margin-top: 0;
@@ -167,9 +186,8 @@ p.stars.selected a:not(.active)::before {
 }
 .woocommerce #content div.product .woocommerce-tabs .panel, .woocommerce div.product .woocommerce-tabs .panel, .woocommerce-page #content div.product .woocommerce-tabs .panel, .woocommerce-page div.product .woocommerce-tabs .panel {
     padding: 10px 0 0;
-    margin: 0 0 0 1%;
+    margin: auto;
     width: 77%;
-    float: left;
 }
 .woocommerce #content div.product .woocommerce-tabs, .woocommerce div.product .woocommerce-tabs, .woocommerce-page #content div.product .woocommerce-tabs, .woocommerce-page div.product .woocommerce-tabs {
     margin: 20px 0 30px;
@@ -177,6 +195,154 @@ p.stars.selected a:not(.active)::before {
     border-left: 0;
     border-right: 0;
 }
+.woocommerce-Tabs-panel.panel {
+    margin:auto;
+    text-align:center;
+}
+/********************** rating ********************/
+.comment-form-comment textarea,.comment-form .submit {
+    margin:auto;
+}
+.related.products h2 {
+    text-align:center;
+}
+.summary .product_title {
+    margin-top: 1em;
+    font-size: 1.275em;
+}
+.summary .product_meta {
+    text-align:center;
+}
+.woocommerce-product-details__short-description {
+    text-align:center;
+}
+/**************************Form cart *******************************************/
+form.cart {
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+form.cart .quantity input {
+    margin:auto;
+}
+/**************** gallery wc zoom **************************************************/
+.single-product div.product .woocommerce-product-gallery {
+    position: relative;
+    float: unset;
+}
+.single-product div.product .woocommerce-product-gallery .woocommerce-product-gallery__trigger {
+    position: absolute;
+    top: 2em;
+    right: calc(50% - 120px);
+    display: block;
+    z-index: 99;
+}
+
+.woocommerce-product-gallery__wrapper {
+    max-width: 300px;
+    margin: auto;
+}
+/******************************************************************************************/
+/*************************** cart ********************************************************/
+.shop_table tbody {
+    border-bottom: 1px solid var(--default-dark-color);
+}
+.shop_table .product-remove {
+    font-size: 2em;
+    margin: 0.5em;
+}
+.shop_table tr {
+    padding: 1em;
+    margin-bottom: 1em;
+}
+.shop_table td {
+    padding:0.5em;
+    text-align:center;
+    vertical-align: middle;
+}
+table.shop_table_responsive tr td {
+    text-align:center;
+}
+.product-quantity input,.coupon input {
+    margin:auto;
+}
+.shop_table td.product-remove {
+    vertical-align: top;
+}
+.cart_totals {
+    margin-top: 0.5em;
+    padding: 0.5em;
+}
+.cart_totals h2 {
+    text-align:center;
+}
+.wc-proceed-to-checkout {
+    text-align:center;
+    margin: 45px;
+    padding:0.5em;
+
+}
+
+@media screen and (min-width: 1200px){
+    table.shop_table_responsive tr th, table.shop_table_responsive tr td {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width:0) and (max-width:1200px) {
+    .shop_table {
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+    }
+    table.shop_table_responsive thead {
+        display: none;
+    }
+    .shop_table tbody {
+        width:unset;
+      
+    }
+    .shop_table tr {
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    .shop_table .woocommerce-cart-form__cart-item {
+        box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    }
+
+    .shop_table .product-remove {
+        align-self:flex-start;
+        font-size: 2em;
+        margin: 0.5em;
+    }
+
+    .shop_table .product-thumbnail,.shop_table .product-name,.shop_table .product-price,.shop_table .product-quantity ,.shop_table .product-subtotal{
+        margin:10px;
+    }
+    .shop_table .product-price{
+        display:none;
+    }
+}
+.cart_item .product-name {
+    color: #78797a
+}
+.cart_item .product-name .product-quantity {
+    color:var(--default-orange-color);
+}
+
+.cart-subtotal td,.order-total td {
+    text-align:left;
+}
+.order-total th {
+    font-weight: bold;
+}
+
+
+
+/******************************************************************************************/
 .woocommerce-info, .woocommerce-noreviews, p.no-comments {
     background-color: transparent!important;
 }
@@ -288,4 +454,149 @@ p.stars.selected a:not(.active)::before {
 ul.products.columns-4 li.product {
     margin:20px auto;
     text-align:center;
+}
+
+.woocommerce-loop-product__title,.price {
+    text-align:center;
+}
+
+.add_to_cart_button,.single_add_to_cart_button {
+    text-align:center;
+    width:unset!important;
+    border:none;
+}
+.add_to_cart_button:hover {
+    background-color: var(--default-orange-color)!important;
+    color:var(--default-dark-color)!important;
+}
+
+.woocommerce-loop-product__title {
+    font-size:inherit;
+}
+
+
+.onsale {
+    color: #FFFFFF;
+    background-color: #ba2227;
+    text-transform:uppercase;
+    padding:1em;
+    border-radius:100%;
+}
+/***********************************validate command form ****************************/
+.woocommerce-form-coupon-toggle {
+    text-align: center;
+    padding: 0.5em;
+    line-height: 1.5em;
+    margin-bottom: 1.5em;
+}
+.checkout_coupon.woocommerce-form-coupon {
+    padding:0.5em;
+    text-align:center;
+    margin-bottom:1em;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+.checkout_coupon.woocommerce-form-coupon input {
+   margin:auto;
+}
+.checkout.woocommerce-checkout{
+    margin-top:1em;
+    padding:0.5em;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+.woocommerce-billing-fields h3 {
+    font-weight: bold;
+    font-size:1.5em;
+    text-align: center;
+    padding:0.5em;
+    margin-bottom:2em;
+}
+.woocommerce-billing-fields__field-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom:1.5em;
+}
+
+.select2-selection__rendered {
+    text-align:center;
+}
+.select2-search.select2-search--dropdown input {
+    margin:auto;
+}
+.col-1 input {
+    width:unset;
+}
+.select2-results__option {
+    text-align:center;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: var(--default-orange-color);
+    line-height: 28px;
+}
+.select2-results__option[aria-selected], .select2-results__option[data-selected] {
+    color: var(--default-orange-color);
+    cursor: pointer;
+    list-style:none;
+}
+.select2-container--default .select2-results__option[aria-selected=true], .select2-container--default .select2-results__option[data-selected=true] {
+    background-color: #faaf31;
+    color: #fff;
+}
+.select2-container--default .select2-results__option--highlighted[aria-selected], .select2-container--default .select2-results__option--highlighted[data-selected] {
+    background-color: var(--default-dark-color);
+    color: var(--default-orange-color);
+    list-style:none;
+}
+.col-2 .woocommerce-input-wrapper textarea {
+    width:80%;
+    margin:auto;
+    min-height:250px;
+}
+.woocommerce-additional-fields {
+    text-align:center;
+}
+.woocommerce-additional-fields h3 {
+   font-weight: bold;
+}
+.form-row.notes {
+    color: #939598;
+}
+.form-row.notes .optional,.required {
+    color:#e96363;
+}
+#order_review_heading {
+    font-weight: bold;
+    text-align:center;
+    font-size:1.5em;
+    padding:0.5em;
+    margin-top:1em;
+    margin-bottom: 1em;
+}
+.woocommerce-checkout-review-order {
+    padding:0.5em;
+    margin:1em auto;
+
+}
+.checkout-button.button.alt.wc-forward {
+    background:var(--default-dark-color);
+    padding:1.2rem;
+    border-radius: 4px;
+}
+.checkout-button.button.alt.wc-forward:hover {
+    color: #fff !important;
+    transition: color 0.1s ease;
+    background: var(--default-orange-color);
+}
+@media screen and (min-width:1200px) {
+    .cart_item td {
+    text-align:left;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .col2-set .form-row-first, .col2-set .form-row-last {
+        width: unset; 
+        float:unset;
+        margin:auto;
+    }
 }
