--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,39 +3,88 @@
 /*****************************************************************************/
 
 footer.site-footer {
-    min-height:200px;
     color:var(--default-dark-color);
    display:flex;
-   flex-direction:row;
+   flex-direction:column;
    align-items: center;
    justify-content: center;
    border-top: 5px solid black;
    min-height:200px;
+   padding-bottom: 75px;
 }
 
 footer.site-footer a {
     color:#fff;
 }
 .footer-widget, .site-info {
-    width:50%;
+    width:100%;
     margin:1em;
+    text-align:center;
 }
-.footer-sep {
-    background:var(--default-dark-color);
-    min-height:200px;
-    width:1px;
-}
+
 .site-info {
     font-family: inherit;
     font-weight: 700;
     
 }
-@media screen and (min-width:1200px) {
-    
-}
 
+.footer-widget .wp-block-search .wp-block-search__input {
+    
+    margin: auto;
+}
 
 .onde-social-widget img {
     width:48px;
     height:auto;
+}
+
+.footer-widget li.widget {
+    list-style:none;
+}
+
+.footer-widget .menu-item {
+    padding:0;
+}
+
+.footer-widget .menu-item a {
+    font-size:13px;
+    line-height: 13px;
+}
+
+.footer-widget .widgettitle {
+    margin:0.3em auto;
+}
+
+.footer-widget .wp-block-search .wp-block-search__button {
+    border:none;
+    padding:1em;
+    color:#fff;
+}
+
+.footer-widget .wp-block-search .wp-block-search__button:hover {
+    background-color:var(--default-dark-color);
+}
+
+
+@media screen and (min-width:1200px) {
+    footer.site-footer {
+        flex-direction:row;
+    }
+    .footer-widget, .site-info {
+        width:50%;
+        margin:1em;
+        text-align:unset;
+       
+    }
+    .site-info {
+        text-align: center;
+    }
+    .footer-widget {
+        border-right:1px solid var(--default-dark-color);
+    }
+    .footer-widget .wp-block-search .wp-block-search__input {
+    
+        margin:0;
+    }
+    
 }
